# ai-agent-virtual-life

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
apps/town/: .env.example  Dockerfile  README.md  pyproject.toml
apps/town/src/town/: __init__.py  bootstrap.py  config_loader.py  director.py  main.py  metrics.py  personas.yaml  scene_seeder.py  scene_store.py
apps/town/src/town/config/base/: locations.yaml  personas.yaml
apps/town/src/town/static/: canvas.js  index.html  style.css
apps/town/tests/: conftest.py  test_agent_status_api.py  test_api_director_replay.py  test_api_director_scene.py  test_api_director_speed.py  test_api_restart.py  test_api_scenes.py  test_bootstrap_env.py  test_command_api.py  test_config_loader.py  test_e2e.py  test_frontend_e2e.py  test_history_endpoints.py  test_pause.py  test_reflect_wiring.py  test_run_tick.py  test_scene_seeder.py  test_scene_store.py
apps/town/tests/integration/: conftest.py  test_integration.py
infra/: docker-compose.yml
scripts/: verify_v1_to_v5.sh
