[project]
name = "ai-agent-virtual-life"
version = "0.1.0"
description = "LLM 驱动的虚拟小镇,智能体 24/7 在跑"
requires-python = ">=3.12"
dependencies = [
    "prometheus-client>=0.25.0",
]

[tool.uv.workspace]
members = [
    "packages/llm-client",
    "packages/memory-reflection",
    "packages/event-bus",
    "packages/agent-runtime",
    "packages/event-memory-system",
    "packages/virtual-world-engine",
    "packages/agent-behavior-orchestrator",
    "packages/dialogue-generator",
    "apps/town",
]

[tool.uv.sources]
llm-client = { workspace = true }
memory-reflection = { workspace = true }
event-bus = { workspace = true }
agent-runtime = { workspace = true }
event-memory-system = { workspace = true }
virtual-world-engine = { workspace = true }
agent-behavior-orchestrator = { workspace = true }
dialogue-generator = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "apps"]
markers = [
    "integration: requires real docker postgres+redis (deselect with '-m \"not integration\"')",
    "production: e2e tests against deployed town (https://life.intelab.cn, deselect with '-m \"not production\"')",
]
addopts = "-m 'not integration and not production'"

[dependency-groups]
dev = [
    "playwright>=1.60.0",
]
