[project]
name = "town"
version = "0.1.0"
description = "AI 智能体虚拟小镇 FastAPI server — L3 应用层,装配所有 L1/L2 组件"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "websockets>=12",
  "python-dotenv>=1.0",  # 加载 .env
  "pyyaml>=6.0",
  "llm-client",          # 本地 workspace 包
  "memory-reflection",
  "event-bus",
  "agent-runtime",
  "virtual-world-engine",
  "agent-behavior-orchestrator",
  "dialogue-generator",
  "event-memory-system",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/town"]
